<resources>
    <string name="app_name">Zamisho App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">Products</string>
    <string name="collections">Collections</string>
    <string name="orders">Orders</string>
    <string name="my_account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_address">Add New Address</string>
    <string name="add_new">Add New</string>
    <string name="select_address">Select Address</string>
    <string name="shop_cart">Cart</string>
    <string name="add_margin">Add Margin</string>
    <string name="margin_text">ZiShoo will collect this amount at product delivery time Then we will sent you margin directly to you bank account</string>
    <string name="payment_history">Payment History</string>
    <string name="shared_catalog">Shared Catalog</string>
    <string name="no_address">You have no address yet</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="done">Done</string>
    <string name="save_address">Save Address</string>
    <string name="next">Next</string>


    <string name="name_error">Enter Your Name</string>
    <string name="emil_error">Enter Your Email</string>
    <string name="address_error">Enter Your Address</string>
    <string name="gender_error">Your Gender</string>
    <string name="birth_error">Enter Date of Birth</string>
    <string name="city_error">Enter Your City</string>
    <string name="province_error">Enter Your Province</string>

    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_number">Phone Number</string>
    <string name="enter_house">Enter House/Flat/Building</string>
    <string name="enter_user_address">Enter User Address</string>
    <string name="enter_user_city">Enter Your City</string>
    <string name="enter_user_province">Enter Your State</string>
    <string name="enter_user_postal">Postal</string>

    <string name="how_to_use">How To Use</string>
    <string name="help">Help</string>
</resources>
