<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.CustomDialog"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ic_action_back">

            </ImageView>

            <com.ideologer.zamishoapp.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/add_address"
                android:textColor="@color/colorAccent"
                android:textSize="14dp"
                app:custom_font="Montserrat-SemiBoldItalic.otf">

            </com.ideologer.zamishoapp.utils.CustomTextView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/rlTop"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/enter_user_name"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/curser_color">

        </EditText>

        <EditText
            android:id="@+id/etUserPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/enter_user_number"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/curser_color">

        </EditText>

        <EditText
            android:id="@+id/etHouseAdress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/enter_house"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/curser_color">

        </EditText>

        <EditText
            android:id="@+id/etUserAdress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/enter_user_address"
            android:maxLines="2"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/curser_color">

        </EditText>


        <EditText
            android:id="@+id/etUserCity"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/enter_user_city"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/curser_color">

        </EditText>

        <EditText
            android:id="@+id/etUserState"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/enter_user_province"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/curser_color">

        </EditText>

        <EditText
            android:id="@+id/etPostalCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/enter_user_postal"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/curser_color">

        </EditText>

    </LinearLayout>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_home"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/save_address"
        android:textColor="@color/colorAccent"
        android:textSize="14sp">

    </Button>
</RelativeLayout>
