<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SelectCustomerFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/rlSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="14sp"
            android:background="@drawable/input_field_border"
            android:drawableLeft="@drawable/ic_action_search_primary"
            android:gravity="center_vertical"
            android:hint="Search with address/phone number"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/curser_color">

        </EditText>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAddresses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlSearch">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_action_empty_address">

        </ImageView>

        <com.ideologer.zamishoapp.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_address"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            app:custom_font="Montserrat-SemiBold.otf" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:weightSum="2"
    android:orientation="horizontal">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_home"
        android:paddingLeft="50dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:text="@string/add_new"
        android:textColor="@color/colorAccent"
        android:textSize="12sp">

    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_green"
        android:paddingLeft="50dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:text="@string/next"
        android:textColor="@color/colorAccent"
        android:textSize="12sp">

    </Button>
</LinearLayout>
    <Button
        android:id="@+id/btnNewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_home"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:visibility="gone"
        android:text="@string/add_address"
        android:textColor="@color/colorAccent"
        android:textSize="14sp">

    </Button>
</RelativeLayout>